# MELODIES-MONET

./: .gitignore  .readthedocs.yaml  README.md  README.txt  __init__.py  meta.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
ci/: check-for-license-header.py
cmaq/: 01.verify_pair.py  02.verify_stats.py  02.verify_stats_aeronet.py  04.verify_spatial_bias.py  06.verify_box_plots.py  08.spatial_plots_level_rtfcst.py  11.spatial_plots_level_simple_rtfcst.py  naqfc_test_cmaq_forecast.sh
docs/: .readthedocs.yaml  README_docs.txt  api.rst  cli.rst  conf.py  contributing.rst  description.rst  environment-docs.yml  getting-started.rst  index.rst  installation.rst  melodies_monet.plots.rst  melodies_monet.rst  melodies_monet.stats.rst  melodies_monet.util.rst  models.rst  monet.rst  supported-datasets.rst  under-development.rst  viewing-output.rst
docs/appendix/: machine-specific-install.rst  troubleshooting.rst  yaml.rst
docs/applications/: forecasts.rst  publications.rst
docs/background/: contributing.rst  description.rst  getting-started.rst  installation.rst  introduction.rst  satellite_datasets.rst  supported-datasets.rst  supported_analyses.rst  supported_datasets.rst  supported_plots.rst  supported_stats.rst  time_chunking.rst  under-development.rst  viewing-output.rst
docs/develop/: contribute.rst  datasets.rst  developers_guide.rst  development_team.rst  information_for_devs.rst  other_resources.rst  past_workshops.rst  update_code.rst  workshops.rst
docs/examples/: AEROMMA_UFS-AQM_Plots.ipynb  MM-example-cesm-fv.ipynb  UFS-AQM_ozone_sonder.yaml  aircraft_pairing.rst  airnow_camchem_se.ipynb  airnow_wrfchem.ipynb  airnow_wrfchem.md  airnow_wrfchem.rst  airnow_wrfchem_reg.ipynb  camchem.ipynb  control_camchem.yaml  control_camchem_se.yaml  control_idealized.yaml  control_read_looped_aircraft_AEROMMA_UFS_AQM.yaml  control_wrfchem_mech-0905_2.yaml  control_wrfchem_mech-0905_2_reg.yaml  control_wrfchem_saveandread.yaml  idealized.ipynb  intro_examples.rst  read_paired_data.ipynb  regional_ts.rst  save_paired_data.ipynb  tutorial-data.ipynb
docs/getting_started/: downloading_obs.rst  how_to_run.rst  installation.rst  software_architecture.rst
docs/templates/: installing.rst  modules.rst  monet_wcoss.rst  observations.rst
docs/tutorial/: describe_structure.rst  downloading_obs.rst  getting_started.rst  how_to_run.rst  installation.rst  machine-specific-install.rst  software_architecture.rst  yaml.rst
docs/users_guide/: description.rst  gridded_datasets.rst  introduction.rst  supported_datasets.rst  supported_diagnostics.rst  supported_plots.rst  supported_stats.rst
examples/forecast_evaluation/: Monet-analysis-example-plots-wrf-rapchemtest.py  (+8 more)
melodies_monet/: Monet-analysis-example-plots-cmaq-surf.ipynb  Monet-analysis-example-plots-cmaq.ipynb  Monet-example-raqms-aeronet.ipynb  __init__.py  __main__.py  _cli.py  cli.py  control_cmaq-rrfs_surface-all-short_test_jupyter.yaml  control_cmaq-rrfs_surface-all.yaml  control_cmaq-rrfs_surface.yaml  control_cmaq.yaml  driver.py  driver_backup.py  driver_merge_conflicts.py  driver_time_chunking.py  link_files_cmaq.sh  link_files_rrfs.sh  run_melodies_monet.py  scratch_for_merge_conflicts.txt  submit_hera.sh  subsetter.py  tutorial.py
monet_analysis/: Monet-analysis-example-plots-cmaq.ipynb  Monet-analysis-example-plots.ipynb  Monet-analysis-example.ipynb  control.yaml  control_cmaq.yaml  ctest2.yaml  driver.py  reformat_airnow.ipynb  taylor_plots.py
python_env_ymls/: environment.yml
rapchem/: 02.verify_stats_open_aq.py  07.spatial_plots_rtfcst.py  10.verify_combine_pair.py  naqfc_test_rap_forecast.sh  rapchem.py
scripts/: site_analysis_aeronet.py  subsetter.py
to_generalize/: OutputPlot_Config.py  avg_trp_no2.py  daily_trp_no2.py  run_daily_trp_no2.sh
unified/: 02.verify_stats.py
wrfchem/: 04.verify_spatial_bias.py  04.verify_spatial_bias_4km.py  rapchem.py
(+210 files in other folders)
