[metadata]
name = melodies-monet
version = attr: melodies_monet.__version__
description = MELODIES MONET unified verification package
long_description = file: README.md
url = https://github.com/NOAA-CSL/MELODIES-MONET
license = MIT  # FIXME
author = Barry D. Baker  # TODO
author_email = barry.baker@noaa.gov
maintainer = Barry D. Baker
maintainer_email = barry.baker@noaa.gov
keywords = model, verification, hysplit, cmaq, atmosphere, camx, evaluation, ufs, rrfs

[options]
zip_safe = True
packages = melodies_monet
include_package_data = True
python_requires = >=3.6
install_requires =  # TODO: monet/monetio instead of some of these
  cartopy
  dask
  global_land_mask
  matplotlib
  netCDF4
  pandas
  pydecorate
  pyresample
  pyyaml
  seaborn
  xarray
  xesmf; platform_system!="Windows"

# [options.extras_require]  # TODO

[options.package_data]
* = data/*.csv, data/*.tsv, data/*.txt, data/*.png

[flake8]
max-line-length = 100
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  W503 # line break before binary operator
  E226 # missing whitespace around arithmetic operator
