[metadata]
name = melodies-monet
version = attr: melodies_monet.__version__
description = MELODIES MONET unified verification package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NOAA-CSL/MELODIES-MONET
license = Apache 2.0
author = Rebecca Schwantes
author_email = rebecca.schwantes@noaa.gov
maintainer = Rebecca Schwantes
maintainer_email = rebecca.schwantes@noaa.gov
keywords = model, verification, air-quality, atmosphere, evaluation

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  cartopy
  matplotlib
  monet
  monetio
  netCDF4
  numpy
  pandas
  pyyaml
  seaborn
  statsmodels
  xarray

[options.extras_require]
tutorial =
  pooch
cli =
  typer[all]
all =
  %(tutorial)s
  %(cli)s

[options.package_data]
* = data/*.csv, data/*.tsv, data/*.txt, data/*.png

[options.entry_points]
console_scripts =
  melodies-monet = melodies_monet._cli:cli

[flake8]
max-line-length = 100
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  W503 # line break before binary operator
  E226 # missing whitespace around arithmetic operator
